--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,3 +1,14 @@
 * {
-    font: Inter,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  border-width: 0;
+  border-style: solid;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  transition-property: background-color;
+  transition-duration: 200ms;
+  line-height: 200ms;
+  font-feature-settings: "ss02";
 }
