--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2,13 +2,16 @@
   border-width: 0;
   border-style: solid;
   box-sizing: border-box;
+  border-color: var(--chakra-colors-chakra-border-color);
+  word-wrap: break-word;
 }
 
 body {
-  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: var(--chakra-fonts-body);
+  color: var(--chakra-colors-chakra-body-text);
+  background: var(--chakra-colors-chakra-body-bg);
   transition-property: background-color;
-  transition-duration: 200ms;
-  line-height: 200ms;
+  transition-duration: var(--chakra-transition-duration-normal);
+  line-height: var(--chakra-lineHeights-base);
   font-feature-settings: "ss02";
 }
