--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -18,7 +18,8 @@
   border-bottom-width: 1px;
   border-bottom-style: solid;
   padding-left: 10px;
-  font-size: larger;
+  font-size: large !important;
+  border-color: transparent !important;
 }
 
 .search-model {
