--- a/src/components/actionList/actionList.css
+++ b/src/components/actionList/actionList.css
@@ -24,15 +24,11 @@
 .list-actionable-item {
   padding-inline-start: var(--chakra-space-3);
   padding-inline-end: var(--chakra-space-3);
-  /* padding-top: var(--chakra-space-3); */
+  padding-top: var(--chakra-space-3);
   padding-bottom: var(--chakra-space-3);
   background: var(--chakra-colors-transparent);
   cursor: pointer;
   border-radius: var(--chakra-radii-md);
-}
-
-.list-actionable-item:hover {
-  background: var(--chakra-colors-blackAlpha-50);
 }
 
 .actionable-item-container {
@@ -41,5 +37,12 @@
   align-items: center;
   -webkit-box-pack: justify;
   justify-content: space-between;
+  flex-direction: row;
+}
+
+.actionable-item-text-container {
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
   flex-direction: row;
 }
