--- a/src/components/leftSocial/leftSocial.css
+++ b/src/components/leftSocial/leftSocial.css
@@ -39,7 +39,7 @@
   -moz-transform: translateY(-4px);
   -ms-transform: translateY(-4px);
   transform: translateY(-4px);
-  color: var(--chakra-colors-teal-500);
+  color: #aeccec;
 }
 
 .left-social-hr {
