added some css import

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -15,3 +15,37 @@ body {
   line-height: var(--chakra-lineHeights-base);
   font-feature-settings: "ss02";
 }
+
+::-moz-selection {
+  /* Code for Firefox */
+  color: #000;
+  background: #aeccec;
+}
+
+::selection {
+  color: #000;
+  background: #aeccec;
+}
+
+/* total width */
+body::-webkit-scrollbar {
+  background-color: transparent;
+  width: 8px;
+}
+
+/* background of the scrollbar except button or resizer */
+body::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+/* scrollbar itself */
+body::-webkit-scrollbar-thumb {
+  background-color: #babac0a3;
+  border-radius: 16px;
+  border: 1px solid transparent;
+}
+
+/* set button(top and bottom of the scrollbar) */
+body::-webkit-scrollbar-button {
+  display: none;
+}
